--- a/style.css
+++ b/style.css
@@ -6128,10 +6128,21 @@ color: rgba(29, 15, 28, 255);
         font-size: 18px !important;
     }
 
+    .section-sub-title {
+        font-size: 16px !important;
+    }
+
+    .section-text {
+        font-size: 14px !important;
+    }
+
     .comp-branding-sub-title {
         width: auto;
     }
-
+    
+    .comp-branding-items-text {
+        text-align: right;
+    }
  }
 
 
