--- a/style.css
+++ b/style.css
@@ -4869,30 +4869,42 @@ color: rgba(29, 15, 28, 255);
 /* NAV-MOB */
 
 .mobile-menu-nav-list {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     list-style: none;
 }
 
 .mobile-menu-nav-item {
-    margin: 15px 0;
+    /* margin: 30px 0; */
 }
 
 .mobile-menu-nav-item__link {
+    display: block;
+    padding: 30px 0;
     text-decoration: none;
+    cursor: pointer;
+}
+
+.mobile-menu-nav-item__link:hover .mobile-menu-nav-item__link-text,
+.mobile-menu-nav-item__link:focus .mobile-menu-nav-item__link-text {
+    color: #5cfcd7;
 }
 
 .mobile-menu-nav-item__link-text {
-    color: black;
+    color: #fff;
 }
 
 .mobile-menu {
-    /* margin-left: 15px; */
     position: fixed;
     z-index: 25;
     left: 0;
     top: 0;
-    width: 270px;
+    width: 100%;
     height: 100vh;
-    background-color: #008eff;
+    /* background-color: #008eff; */
     transform: translateX(-100%);
     transition: all .25s;
 }
@@ -4909,12 +4921,15 @@ color: rgba(29, 15, 28, 255);
     display: none;
     align-items: center;
     width: 100%;
-    height: 149px;
+    height: 85px;
     padding: 20px 15px;
     background-color: #fff;
     box-shadow: 0 3px 5px rgba(0,0,0, .1);
-    background-color: #008eff;
+    /* background-color: #008eff; */
+    background-image: url(images/header-bg.png);
 }
+
+.header-mobile 
 
 .open-menu-btn {
     display: flex;
@@ -4950,11 +4965,13 @@ color: rgba(29, 15, 28, 255);
     bottom: 0;
     visibility: hidden;
     opacity: 0;
-    background-color: rgba(0,0,0, .5);
+    background-color: rgba(0, 0, 0, 0.878);
     transition: all .15s;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
 }
+
+  
 
 .mobile-menu-overlay_active {
     visibility: visible;
@@ -4982,6 +4999,10 @@ color: rgba(29, 15, 28, 255);
 
     .header-mobile {
         display: flex;
+    }
+
+    .header-land-services {
+        min-height: auto;
     }
 }
 
